
# This file was gererated by the build system used internally in the Yandex monorepo.
# Only simple modifications are allowed (adding source-files to targets, adding simple properties
# like target_include_directories). These modifications will be ported to original
# ya.make files by maintainers. Any complex modifications which can't be ported back to the
# original buildsystem will not be accepted.


add_subdirectory(runtime_avx2)
add_subdirectory(runtime_avx512)
add_subdirectory(runtime_core2)
add_subdirectory(runtime_corei7)

add_library(contrib-libs-hyperscan)
target_compile_options(contrib-libs-hyperscan PRIVATE
  -DDISABLE_AVX512VBMI_DISPATCH
  -Wno-everything
)
target_include_directories(contrib-libs-hyperscan PRIVATE
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/include
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src
)
target_link_libraries(contrib-libs-hyperscan PUBLIC
  contrib-libs-cxxsupp
  contrib-restricted-boost
  restricted-boost-graph
  restricted-boost-icl
  restricted-boost-property_map
)
target_sources(contrib-libs-hyperscan PRIVATE
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/alloc.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/compiler/asserts.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/compiler/compiler.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/compiler/error.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/crc32.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/database.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/engine_description.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/fdr.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/fdr_compile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/fdr_compile_util.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/fdr_confirm_compile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/fdr_engine_description.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/flood_compile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/teddy.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/teddy_avx2.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/teddy_compile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/fdr/teddy_engine_description.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/grey.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/hs.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/hs_valid_platform.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/hs_version.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/hwlm/hwlm.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/hwlm/hwlm_build.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/hwlm/hwlm_literal.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/hwlm/noodle_build.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/hwlm/noodle_engine.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/accel.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/accel_dfa_build_strat.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/accelcompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/castle.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/castlecompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/dfa_build_strat.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/dfa_min.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/gough.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/goughcompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/goughcompile_accel.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/goughcompile_reg.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/lbr.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/limex_64.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/limex_accel.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/limex_compile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/limex_native.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/limex_simd128.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/limex_simd256.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/limex_simd384.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/limex_simd512.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/mcclellan.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/mcclellancompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/mcclellancompile_util.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/mcsheng.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/mcsheng_compile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/mcsheng_data.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/mpv.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/mpvcompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/nfa_api_dispatch.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/nfa_build_util.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/rdfa.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/rdfa_graph.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/rdfa_merge.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/repeat.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/repeatcompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/sheng.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/shengcompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/shufti.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/shufticompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/tamarama.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/tamaramacompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/truffle.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfa/trufflecompile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_anchored_acyclic.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_anchored_dots.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_asserts.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_builder.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_calc_components.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_cyclic_redundancy.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_depth.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_dominators.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_edge_redundancy.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_equivalence.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_execute.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_expr_info.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_extparam.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_fixed_width.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_fuzzy.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_haig.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_holder.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_is_equal.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_lbr.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_limex.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_limex_accel.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_literal_analysis.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_literal_component.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_literal_decorated.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_mcclellan.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_misc_opt.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_netflow.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_prefilter.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_prune.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_puff.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_redundancy.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_region.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_region_redundancy.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_repeat.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_reports.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_restructuring.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_revacc.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_sep.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_small_literal_set.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_som.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_som_add_redundancy.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_som_util.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_split.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_squash.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_stop.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_uncalc_components.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_utf8.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_util.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_vacuous.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_violet.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/nfagraph/ng_width.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/AsciiComponentClass.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/Component.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentAlternation.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentAssertion.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentAtomicGroup.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentBackReference.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentBoundary.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentByte.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentClass.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentCondReference.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentEUS.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentEmpty.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentRepeat.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentSequence.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentVisitor.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ComponentWordBoundary.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ConstComponentVisitor.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/Utf8ComponentClass.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/buildstate.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/check_refs.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/logical_combination.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/parse_error.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/parser_util.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/prefilter.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/shortcut_literal.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/ucp_table.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/unsupported.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/utf8_validate.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/block.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/catchup.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/init.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/match.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/program_runtime.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_add.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_add_mask.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_anchored.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_bytecode.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_castle.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_compile.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_convert.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_dedupe.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_engine_blob.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_exclusive.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_groups.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_infix.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_instructions.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_lit_accel.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_long_lit.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_lookaround.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_matchers.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_merge.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_misc.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_program.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_role_aliasing.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_scatter.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_build_width.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/rose_in_util.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/rose/stream.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/runtime.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/scratch.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/smallwrite/smallwrite_build.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/som/slot_manager.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/som/som_runtime.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/som/som_stream.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/stream_compress.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/alloc.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/charreach.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/clique.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/compile_context.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/compile_error.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/cpuid_flags.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/depth.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/dump_mask.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/fatbit_build.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/masked_move.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/multibit.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/multibit_build.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/report_manager.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/simd_utils.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/state_compress.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/target_info.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/util/ue2string.cpp
)
target_ragel_lexers(contrib-libs-hyperscan
  PRIVATE
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/Parser.rl6
  -CG2
)
target_ragel_lexers(contrib-libs-hyperscan
  PRIVATE
  ${CMAKE_SOURCE_DIR}/contrib/libs/hyperscan/src/parser/control_verbs.rl6
  -CG2
)
