add_library(contrib-libs-jemalloc)
target_compile_options(contrib-libs-jemalloc PRIVATE
  -funroll-loops
  -fvisibility=hidden
)
target_include_directories(contrib-libs-jemalloc PRIVATE
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/include
  ${CMAKE_SOURCE_DIR}/contrib/libs/libunwind/include
)
target_link_libraries(contrib-libs-jemalloc PUBLIC
  contrib-libs-cxxsupp
  contrib-libs-libunwind
)
target_sources(contrib-libs-jemalloc PRIVATE
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/hack.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/arena.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/background_thread.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/base.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/bin.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/bitmap.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/ckh.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/ctl.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/div.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/extent.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/extent_dss.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/extent_mmap.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/hash.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/hook.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/jemalloc.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/jemalloc_cpp.cpp
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/large.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/log.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/malloc_io.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/mutex.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/mutex_pool.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/nstime.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/pages.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/prng.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/prof.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/rtree.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/safety_check.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/sc.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/stats.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/sz.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/tcache.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/test_hooks.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/ticker.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/tsd.c
  ${CMAKE_SOURCE_DIR}/contrib/libs/jemalloc/src/witness.c
)
